[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menu/Help/Story/StoryMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Resources/menu-background.png" type="Texture" id=2]
[ext_resource path="res://Menu/Help/Story/story.png" type="Texture" id=3]
[ext_resource path="res://Menu/Resources/back-unpressed.png" type="Texture" id=4]
[ext_resource path="res://Menu/Resources/back-pressed.png" type="Texture" id=5]
[ext_resource path="res://Menu/Help/Guide/next-unpressed.png" type="Texture" id=6]
[ext_resource path="res://Menu/Help/Guide/next-pressed.png" type="Texture" id=7]
[ext_resource path="res://Menu/InGame/exit-unpressed.png" type="Texture" id=8]
[ext_resource path="res://Menu/InGame/exit-pressed.png" type="Texture" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=2]
size = 130
outline_size = 5
outline_color = Color( 1, 0.454902, 0.454902, 1 )
font_data = SubResource( 1 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 1350, 600 )

[node name="StoryMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.5
margin_top = -473.5
margin_right = 720.5
margin_bottom = 473.5
rect_pivot_offset = Vector2( -330, 210 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1441, 947 )

[node name="Label" type="Label" parent="Background/VBoxContainer"]
margin_right = 1441.0
margin_bottom = 158.0
rect_min_size = Vector2( 1440, 158 )
custom_fonts/font = SubResource( 2 )
text = "GUIDE"
align = 1

[node name="TextureRect" type="TextureRect" parent="Background/VBoxContainer"]
margin_top = 162.0
margin_right = 1441.0
margin_bottom = 762.0
texture = SubResource( 3 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 766.0
margin_right = 1441.0
margin_bottom = 916.0
custom_constants/separation = 100
alignment = 1

[node name="BackButton" type="TextureButton" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 220.0
margin_right = 670.0
margin_bottom = 150.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="NextButton" type="TextureButton" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 770.0
margin_right = 1220.0
margin_bottom = 150.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 3

[node name="ExitButton" type="TextureButton" parent="Background/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 1100.0
margin_right = 1550.0
margin_bottom = 150.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
